# DeepSeekPlugin

./: CMakeLists.txt  CMakeLists.txt.user.5d08b77  DeepSeekPlugin.json.in  DeepSeekPlugin.json.in.bk  README.md  deepseekcodeeditor.cpp  deepseekcodeeditor.h  deepseekplugin.cpp  deepseekplugin.h  deepseekpluginconstants.h  deepseekplugintr.h  deepseekprojectgenerator.cpp  deepseekprojectgenerator.h  deepseeksettingsdialog.cpp  deepseeksettingsdialog.h  deepseeksettingsdialog.ui  deepseektool.cpp  deepseektool.h  deepseekwidget.cpp  deepseekwidget.h  messagehelper.h
.github/workflows/: build_cmake.yml
